Fixup tiny details button on mobile 0 add click handler to Effect table cell per entry

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@
     --item_meta_bg_blue:    #cbebff; /* light blue  */
 
     /* not used currently */
-    --item_meta_bg_grey:    #ececec; /* light grey  */
+    --item_meta_bg_grey:    rgba(0, 0, 0, 0.10); /* light grey  */
     --item_meta_bg_pink:    #ffdbef; /* light pink  */
     --item_meta_bg_orange:  rgb(255, 217, 169); /* light orange */
     --item_meta_bg_purple:  rgb(229, 198, 255); /* light purple */
@@ -72,7 +72,7 @@
         --item_meta_bg_blue:    rgba(92, 192, 255, 0.40);  /* light blue  */
 
         /* not used currently */
-        --item_meta_bg_grey:    rgba(192, 192, 192, 0.30); /* light grey  */
+        --item_meta_bg_grey:    rgba(192, 192, 192, 0.50); /* light grey  */
         --item_meta_bg_pink:    rgba(255, 101, 186, 0.40); /* light pink  */
         --item_meta_bg_orange:  rgba(255, 168, 58, 0.4); /* light orange */
         --item_meta_bg_purple:  rgb(151, 97, 196, 0.70);   /* light purple */
@@ -191,6 +191,10 @@ select, checkbox, input {
 .itemMetaCheatTypes {
     color: var(--item_meta_text);
     background: var(--item_meta_bg_blue);
+}
+.itemMetaDetails {
+    color: var(--item_meta_text);
+    background: var(--item_meta_bg_grey);
 }
 
 
